Implementar API de inicio de sesión, cierre de sesión y gestión de servicios; agregar navegación y pie de página a las páginas públicas.

--- a/practica-api-estetica/public/index.html
+++ b/practica-api-estetica/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Servicios - Web Salón</title>
-</head>
-<body>
-  <h1>Servicios</h1>
-  <ul id="servicios"></ul>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Servicios - Web Salón</title>
+  </head>
+  <body>
+    <div id="nav-container"></div>
+    <h1>Servicios</h1>
+    <ul id="servicios"></ul>
 
-  <script src="js/mostrarServicios.js"></script>
-</body>
+      <div id="footer-container"></div>
+    <script src="js/mostrarServicios.js"></script>
+    <script src="js/incluirNavFooter.js"></script>
+  </body>
 </html>
