--- a/practica-api-estetica/public/nav.html
+++ b/practica-api-estetica/public/nav.html
@@ -5,7 +5,7 @@
     <li><a href="servicios.html">Servicios</a></li>
     <li><a href="promociones.html">Promociones</a></li>
     <li><a href="admin.php">Admin</a></li>
-    <li><a href="login.php">login</a></li>
+    <li><a href="../api/login/login.php">login</a></li>
     <li><a href="../api/login/logout.php">cerrar sesion</a></li>
   </ul>
 </nav>
