--- a/estetica/paginas/servicios.html
+++ b/estetica/paginas/servicios.html
@@ -51,7 +51,7 @@
       <div class="tarjeta-servicio">
         <img src="../static/images/serv4.jpg" alt="Depilación con cera">
         <h3>Depilación con Cera</h3>
-        <p class="resumen">Depilación de piernas, axilas y rostro.</p>
+        <p class="resumen">Depilación de piernas axilas y rostro.</p>
         <p class="detalle">Depilación de piernas completas, axilas, rostro, zona íntima. Técnica profesional con cera tibia y caliente.</p>
         <button class="boton-ver-mas">Ver más</button>
       </div>
