--- a/api-estetica-2-la-venganza/frontend/turnos.html
+++ b/api-estetica-2-la-venganza/frontend/turnos.html
@@ -162,9 +162,9 @@
 
       async function cargarUsuarios() {
         const res = await fetch(`${BASE_URL}/usuarios`);
-        const usuarios = await res.json();
+        const usuario = await res.json();
         const select = document.getElementById("usuario_id");
-        select.innerHTML = usuarios
+        select.innerHTML = usuario
           .map((u) => `<option value="${u.id}">${u.nombre}</option>`)
           .join("");
       }
