--- a/api-estetica-2-la-venganza/index.html
+++ b/api-estetica-2-la-venganza/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>ver todo</h1>
-    <a href="frontend/index.html">datos de la estetica</a>
+    <a href="frontend/servicios.html">datos de la estetica</a>
+    <a href="frontend/login.html">Login</a>
+    <a href="frontend/estadisticas.html">Estadisticas</a>
+    <a href="frontend/turnos.html">Turnos</a>
 </body>
 </html>
